--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,100 @@
-@import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+:root {
+    --primary: #fdb82c;
+    --second: #3ab7f7;
+    --third: #fa5b5f;
+    --bgColor: #2d2d2d;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+h1,
+h2,
+h3,
+p {
+    color: #fff;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+body {
+    position: relative;
+    background: var(--bgColor);
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
+    min-height: 100vh;
 }
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+section {
+    position: relative;
+    padding: 50px 0 60px;
+    padding-left: 5%;
+    min-height: 100vh;
+    transition: 1s ease-in-out;
+    transform-origin: bottom;
+    z-index: 900;
+}
+
+section .section-title {
+    position: relative;
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+section .section-title::after {
+    position: absolute;
+    content: '';
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -30px;
+    height: 3px;
+    width: 50%;
+    background: linear-gradient(90deg, transparent, var(--primary), var(--primary), transparent);
+    z-index: 1000;
+}
+
+@media (max-width: 768px) {
+    section {
+        padding-left: 15%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
